# factotum

./: .gitignore  pyproject.toml
factotum/apps/finance/: admin.py  apps.py  models.py
factotum/apps/finance/migrations/: 0001_initial.py
factotum/apps/finance/templates/admin/finance/: change_list.html
factotum/config/django/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
